tests/fail/unknown_named_argument/test.yap
i32 fn add(i32 a, i32 b) {
    ret a + b;
}

fn main() {
    _ x = add(.c=1, .a=2);
}
